--- a/modules/meet-snapdragon/css/main.css
+++ b/modules/meet-snapdragon/css/main.css
@@ -616,6 +616,10 @@ height: 100px;
       z-index: 99999;
       opacity: 0;
     }
+		#earth .graphic-position .earth img {
+			width: 100%;
+			height: 100%;
+		}
     #earth .graphic-position .ring {
         opacity: 0;
     }
