--- a/modules/meet-snapdragon/css/main.css
+++ b/modules/meet-snapdragon/css/main.css
@@ -482,26 +482,28 @@ height: 100px;
         text-align: center;
     }
     #header-device {
-        margin-left: -3.75%;
-        width: 33.5%;
+        margin-left: -36px;
+        width: auto;
 				height: auto;
     }
     #gear1 {
         position: absolute;
-        top: 16.4%;
-        left: 56.25%;
-        width: 8.3%;
-				height: auto;
+        top: 53px;
+        left: 50%;
+				margin-left: 60px;
+        width: 80px;
+				height: 80px;
         -webkit-animation:spin 14s linear infinite;
         -moz-animation:spin 14s linear infinite;
         animation:spin 14s linear infinite;
     }
     #gear2 {
         position: absolute;
-        top: 7.4%;
-        left: 63.5%;
-        width: 5.3%;
-				height: auto;
+        top: 24px;
+        left: 50%;
+				margin-left: 129px;
+        width: 50px;
+				height: 50px;
         -webkit-animation:spinreverse 10s linear infinite;
         -moz-animation:spinreverse 10s linear infinite;
         animation:spinreverse 10s linear infinite;
