--- a/modules/meet-snapdragon/css/main.css
+++ b/modules/meet-snapdragon/css/main.css
@@ -1052,8 +1052,9 @@ height: 100px;
 /* single chip */
     #single-chip .text-position {
         margin-top: 4.6%;
-        margin-left: 6.25%;
-        max-width: 500px;
+        margin-left: 0;
+        max-width: 430px;
+				float: right;
         opacity: 0;
     }
     #single-chip .text-position p {
@@ -1063,31 +1064,62 @@ height: 100px;
     }
     #single-chip .graphic-position {
         position: absolute;
-        right: calc(50% - 68px);  /* 68px; */
-        top: 94px;
-        width: 136px;
-        height: 258px;
+        left: 0;
+        top: 119px;
+        width: 480px;
+        height: 267px;
     }
     #single-chip .graphic-position img { position: absolute; }
-    #single-phone {}
     #pop-power {
-        bottom: -30px;
-        right: -36px;
-        width: 0px;
-        /* width: 53px; */
-    }
-    #pop-chip {
-        top: -70px;
-        right: -70px;
-        width: 0px;
-        /* width: 101px; */
+        top: 53px;
+        right: 15px;
+        width: 42px;
+				height: auto;
     }
     #pop-lines {
-        top: 106px;
-        left: -70px;
-        width: 0px;
-        /* width: 76px; */
+        top: -3px;
+        right: 53px;
+        width: 61px;
+				height: auto;
     }
+		
+		@media only screen and (max-width: 959px) {
+			#single-chip .text-position {
+				margin-top: 0;
+				padding-top: 0;
+			}
+			#single-chip .graphic-position {
+				top: auto;
+				bottom: 0;
+			}
+		}
+		@media only screen and (max-width: 599px) {
+			#single-chip .graphic-position {
+				width: 100%;
+			}
+		}
+		@media only screen and (max-width: 479px) {
+			#single-chip {
+				overflow: hidden;
+			}
+			#single-phone {
+				width: 100%;
+				height: auto;
+			}
+			#pop-power {
+        top: 33px;
+        right: -40px;
+			}
+			#pop-lines {
+					top: -30px;
+					right: -20px;
+			}
+		}
+		@media only screen and (max-width: 419px) {
+			#single-chip .graphic-position {
+				width: 80%;
+			}
+		}
 /* end single chip */
 
 /* multiple tasks section */
